# Automation

./: CMakeLists.txt
client/: CMakeLists.txt  client.cpp
cmake/Modules/: FindJsoncpp.cmake
server/: CMakeLists.txt  client.cpp  client.hpp  server  server.cpp  server.hpp  util.cpp  util.h
speech/: CMakeLists.txt  speech.cpp  speech.hpp
speech/training/en-us-adapt/: means  sendump  transition_matrices  variances
